--- a/src/css/TaskList.css
+++ b/src/css/TaskList.css
@@ -133,7 +133,7 @@
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   .task-boxes {
     flex-direction: column;
     gap: 10px;
@@ -150,12 +150,12 @@
   }
   .delete-task-section input,
   .delete-task-section button {
-    width: 100%; /* Full width for smaller screens */
-    margin-right: 0; /* Remove margin on smaller screens */
+    width: 100%; 
+    margin-right: 0;
   }
   .delete-task-section button {
-    width: 100%; /* Full width for smaller screens */
-    height: 40px; /* Adjust height */
+    width: 100%; 
+    height: 40px; 
   }
 }
 
@@ -216,9 +216,11 @@
   .delete-task-section input {
     font-size: 12px;
     padding: 8px;
+    margin: 10px;
   }
   .delete-task-section button {
     font-size: 14px;
     padding: 8px;
+    margin: 10px;
   }
 }
