--- a/src/css/TaskList.css
+++ b/src/css/TaskList.css
@@ -224,3 +224,49 @@
     margin: 10px;
   }
 }
+
+.loader {
+  text-align: center;
+  font-size: 20px;
+  color: #444;
+  padding: 20px;
+}
+
+.no-task-message {
+  text-align: center;
+  font-size: 18px;
+  color: #ff0000;
+  padding: 20px;
+}
+
+.blur-background {
+  filter: blur(5px);
+}
+
+
+.task-chart table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.task-chart th, .task-chart td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.task-chart th {
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.no-task-message, .loader {
+  text-align: center;
+  padding: 20px;
+  font-size: 18px;
+}
+
+
+
+
+
