--- a/src/css/TaskList.css
+++ b/src/css/TaskList.css
@@ -270,3 +270,54 @@
 
 
 
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;  
+    background: rgba(240, 234, 234, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 400px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.dialog-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(245, 242, 242, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dialog-box {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.success-popup {
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 20px;
+    background: rgb(88, 87, 87);
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(112, 112, 112, 0.1);
+}
